crates/nash-report/tests/can/snapshots/can__kinds__big_field_const.snap
---
source: crates/nash-report/tests/can/kinds.rs
assertion_line: 159
description: "module Main exposing (..)\n\nimport Builtin exposing (..)\n\ntype Datum = Datum bytes\n"
info: diagnostic
---
nash::names::representation_mismatch

  × This position requires `Big` in field 1 of Big constructor `Datum` in `Datum`:
   ╭─[src/Main.nash:5:20]
 4 │ 
 5 │ type Datum = Datum bytes
   ·                    ─────
   ╰────
  help: The type has `Const` representation, but `Big` admits only Big types. Change the
        type or the representation requirement.
