crates/nash-report/tests/can/snapshots/can__kinds__big_field_tuple.snap
---
source: crates/nash-report/tests/can/kinds.rs
assertion_line: 166
description: "module Main exposing (..)\n\nimport Builtin exposing (..)\n\ntype Datum = Datum (Int, Int)\n"
info: diagnostic
---
nash::names::representation_mismatch

  × This position requires `Big` in field 1 of Big constructor `Datum` in `Datum`:
   ╭─[src/Main.nash:5:20]
 4 │ 
 5 │ type Datum = Datum (Int, Int)
   ·                    ──────────
   ╰────
  help: The type has `Term` representation, but `Big` admits only Big types. Change the
        type or the representation requirement.
