crates/nash-report/tests/can/snapshots/can__kinds__big_parameter.snap
---
source: crates/nash-report/tests/can/kinds.rs
assertion_line: 113
description: "module Main exposing (..)\n\nimport Builtin exposing (..)\n\ntype Box 'a = Box 'a\n"
---
(
    [
        (
            "Box",
            Arrow(
                Type,
                Type,
            ),
            [
                Implied {
                    trait_: QualifiedName {
                        home: ModuleName {
                            package: Some(
                                PackageName {
                                    author: "nash",
                                    project: "core",
                                },
                            ),
                            name: "Builtin",
                        },
                        name: "Big",
                    },
                    args: [
                        Located {
                            region: Region {
                                start: Position {
                                    line: 5,
                                    column: 19,
                                },
                                end: Position {
                                    line: 5,
                                    column: 21,
                                },
                            },
                            value: Var(
                                "a",
                            ),
                        },
                    ],
                },
            ],
        ),
    ],
    [],
)
