crates/nash-report/tests/can/snapshots/can__kinds__big_record_alias.snap
---
source: crates/nash-report/tests/can/kinds.rs
assertion_line: 147
description: "module Main exposing (..)\n\nimport Builtin exposing (..)\n\ntype alias Vault = { owner : Bytes, amount : Int }\n"
---
(
    [],
    [
        (
            "Vault",
            Type,
            [],
        ),
    ],
)
