crates/nash-report/tests/can/snapshots/can__kinds__big_record_field_rejects_const.snap
---
source: crates/nash-report/tests/can/kinds.rs
assertion_line: 671
description: "module Main exposing (..)\n\nimport Builtin exposing (..)\n\ntype alias Vault = { amount : int }\n"
info: diagnostic
---
nash::names::representation_mismatch

  × This position requires `Big` in field `amount` of Big record alias `Vault`:
   ╭─[src/Main.nash:5:31]
 4 │ 
 5 │ type alias Vault = { amount : int }
   ·                               ───
   ╰────
  help: The type has `Const` representation, but `Big` admits only Big types. Change the
        type or the representation requirement.
