crates/nash-report/tests/can/snapshots/can__kinds__big_union.snap
---
source: crates/nash-report/tests/can/kinds.rs
assertion_line: 109
description: "module Main exposing (..)\n\nimport Builtin exposing (..)\n\ntype Box = Box Int\n"
---
(
    [
        (
            "Box",
            Type,
            [],
        ),
    ],
    [],
)
