crates/nash-report/tests/can/snapshots/can__kinds__binary_self_application_fails_the_occurs_check.snap
---
source: crates/nash-report/tests/can/kinds.rs
assertion_line: 724
description: "module Main exposing (..)\n\nimport Builtin exposing (..)\n\ntype s 'f 'a = S ('f 'f 'a)\ntype tag 'a = Tag\ntype w = W (s s tag)\n"
info: diagnostic
---
nash::names::kind_infinite

  × This application in field 1 of little constructor `S` in `s` would require an
  │ infinite kind:
   ╭─[src/Main.nash:5:22]
 4 │ 
 5 │ type s 'f 'a = S ('f 'f 'a)
   ·                      ──
 6 │ type tag 'a = Tag
   ╰────
  help: Check the type application and the kinds of its arguments.
