crates/nash-report/tests/can/snapshots/can__kinds__const_parameter_conflicts_with_a_big_field.snap
---
source: crates/nash-report/tests/can/kinds.rs
assertion_line: 621
description: "module Main exposing (..)\n\nimport Builtin exposing (..)\n\ntype Box ('a : Const) = Box 'a\n"
info: diagnostic
---
nash::names::contradictory_representation

  × The representation requirements on 'a are incompatible:
   ╭─[src/Main.nash:5:11]
 4 │ 
 5 │ type Box ('a : Const) = Box 'a
   ·           ──
   ╰────
  help: Change the incompatible constraints or uses of this variable.
