crates/nash-report/tests/can/snapshots/can__kinds__dependent_on_invalid_declaration_does_not_panic.snap
---
source: crates/nash-report/tests/can/kinds.rs
assertion_line: 232
description: "module Main exposing (..)\n\nimport Builtin exposing (..)\n\ntype Bad = Bad int\ntype Dependent = Dependent Bad\n"
info: diagnostic
---
nash::names::representation_mismatch

  × This position requires `Big` in field 1 of Big constructor `Bad` in `Bad`:
   ╭─[src/Main.nash:5:16]
 4 │ 
 5 │ type Bad = Bad int
   ·                ───
 6 │ type Dependent = Dependent Bad
   ╰────
  help: The type has `Const` representation, but `Big` admits only Big types. Change the
        type or the representation requirement.
